--- a/PageViewPractice/Base.lproj/Main.storyboard
+++ b/PageViewPractice/Base.lproj/Main.storyboard
@@ -13,10 +13,10 @@
             </objects>
             <point key="canvasLocation" x="14" y="42"/>
         </scene>
-        <!--View Controller-->
+        <!--Content View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PageViewPractice" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ContentViewController" customModule="PageViewPractice" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -47,6 +47,10 @@
                             <constraint firstItem="5OS-B8-mX3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gVU-Xg-xjZ"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="txW-V0-rPb" id="zjN-70-rS4"/>
+                        <outlet property="titleLabel" destination="5OS-B8-mX3" id="Ouk-bF-56k"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
